[package]
name = "mtl"
version = "0.3.48"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[lib]
name = "mtl"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
lto = "no"
opt-level = 1
codegen-units = 4

[profile.release]
debug = 1
panic = "abort"
overflow-checks = true
lto = true
opt-level = 's'

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bincode = "=1.2"
byteorder = "1.1"
chrono = "0.4"
fern = "0.6"
json = "0.12"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
mpq = "=0.7.0"
pcx = "0.2"
rand = "0.7"
scopeguard = "1.1"
serde = "1.0.15"
serde_derive = "1.0.15"
smallvec = "1.0"
thread_local = "1.0"
vec_map = "0.8.0"

[dependencies.winapi]
version = "0.3"
features = ["heapapi", "libloaderapi", "processthreadsapi", "winuser", "winerror"]

[target.'cfg(target_arch = "x86")'.dependencies.samase_shim]
git = "https://github.com/neivv/samase_plugin"
rev = "574a20e4abf0b4146257dd49504a3a490e85bd86"

[dependencies.samase_plugin]
git = "https://github.com/neivv/samase_plugin"
rev = "574a20e4abf0b4146257dd49504a3a490e85bd86"

[dependencies.bw_dat]
git = "https://github.com/neivv/aise"
rev = "68a4c868ed2dc3c68ec45d798718809b73383cc2"
features = ["serde"]

[target.'cfg(target_arch = "x86")'.dependencies.whack]
git = "https://github.com/neivv/whack/"
rev = "118ab14a36312728949bf7c286b30dde473df8c7"

[dependencies.rand_xorshift]
version = "0.2.0"
features = ["serde1"]

[build-dependencies]
scopeguard = "1.1"

[build-dependencies.winapi]
version = "0.3"
features = ["d3dcompiler"]
