[package]
name = "mtl"
version = "0.3.62"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[lib]
name = "mtl"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
lto = "no"
opt-level = 1
codegen-units = 4

[profile.release]
debug = 1
panic = "abort"
overflow-checks = true
lto = true
opt-level = 's'

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bincode = "=1.2"
byteorder = "1.1"
fern = "0.6"
fxhash = "0.2"
json = "0.12"
libc = "0.2"
log = "0.4"
pcx = "0.2"
rand = "0.7"
scopeguard = "1.1"
serde = "1.0.15"
serde_derive = "1.0.15"
smallvec = "1.0"
thread_local = "1.0"
vec_map = "0.8.0"

[dependencies.winapi]
version = "0.3"
features = ["heapapi", "libloaderapi", "processthreadsapi", "sysinfoapi", "winuser", "winerror"]

[target.'cfg(target_arch = "x86")'.dependencies.samase_shim]
git = "https://github.com/neivv/samase_plugin"
rev = "821c5be0a6aabfa8b5fc5b2af2920dc685393058"

[dependencies.samase_plugin]
git = "https://github.com/neivv/samase_plugin"
rev = "821c5be0a6aabfa8b5fc5b2af2920dc685393058"

[dependencies.bw_dat]
git = "https://github.com/neivv/aise"
rev = "351e43a6a131741f56f7f233971186efc863776a"
features = ["serde"]

[target.'cfg(target_arch = "x86")'.dependencies.whack]
git = "https://github.com/neivv/whack/"
rev = "ccd95f5cfa37622bc3ec3d4b0974ab9b631b59b2"

[dependencies.rand_xorshift]
version = "0.2.0"
features = ["serde1"]

[build-dependencies]
scopeguard = "1.1"

[build-dependencies.winapi]
version = "0.3"
features = ["d3dcompiler"]
