[package]
name = "mtl"
version = "0.3.73"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[lib]
name = "mtl"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
lto = "no"
opt-level = 1
codegen-units = 4

[profile.release]
debug = 1
panic = "abort"
overflow-checks = true
lto = true
opt-level = 's'

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bincode = "=1.2"
byteorder = "1.1"
fern = "0.6"
fxhash = "0.2"
json = "0.12"
log = "0.4"
pcx = "0.2"
rand = "0.7"
serde = "1.0.15"
serde_derive = "1.0.15"
smallvec = "1.0"
thread_local = "1.0"
vec_map = "0.8.0"

[dependencies.winapi]
version = "0.3"
features = ["heapapi", "processthreadsapi", "sysinfoapi", "winuser", "winerror"]

[target.'cfg(target_arch = "x86")'.dependencies.samase_shim]
git = "https://github.com/neivv/samase_plugin"
rev = "a3fcdd6abf077589e24f1226e1749a19cb8ef26a"

[dependencies.samase_plugin]
git = "https://github.com/neivv/samase_plugin"
rev = "a3fcdd6abf077589e24f1226e1749a19cb8ef26a"

[dependencies.bw_dat]
git = "https://github.com/neivv/aise"
rev = "42fba4276cbe30e73baefc7f3ad07cadaa2aa2b1"
features = ["serde"]

[target.'cfg(target_arch = "x86")'.dependencies.whack]
git = "https://github.com/neivv/whack/"
rev = "2d1adbae09d75bdaa2af65b0af12760740cd3d2b"

[dependencies.rand_xorshift]
version = "0.2.0"
features = ["serde1"]

[build-dependencies]
scopeguard = "1.1"

[build-dependencies.winapi]
version = "0.3"
features = ["d3dcompiler"]
